feat(persistence): migrar TituloDAO para JSON em ./data/titulos.json
- Cria diretório ./data automaticamente e persiste em titulos.json (UTF-8)
- Serializer/Parser JSON simples sem libs externas
- Geração sequencial de IDs quando id == 0
- Sanitização básica de strings para JSON