@@ -1,76 +1,191 @@
 package gibiteca.persistence;
 
 import gibiteca.model.Titulo;
+
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * DAO simples baseado em JSON para persistir títulos.
+ * O arquivo é salvo em: {PROJECT_DIR}/data/titulos.json
+ */
 public class TituloDAO {
 
-    //Define o nome do arquivo que guarda os dados. Sera criado na raiz do projeto.
-    private static final String FILE_PATH = "titulos.csv";
     private final Path path;
 
     public TituloDAO() {
-        this.path = Paths.get(FILE_PATH);
+        String projectDir = System.getProperty("user.dir"); // diretório onde a app é executada
+        Path dataDir = Paths.get(projectDir, "data");
+        this.path = dataDir.resolve("titulos.json");
+        try {
+            if (!Files.exists(dataDir)) Files.createDirectories(dataDir);
+            if (!Files.exists(path)) {
+                Files.write(path, "[]".getBytes(StandardCharsets.UTF_8));
+            }
+        } catch (IOException e) {
+            System.err.println("Não foi possível preparar o arquivo de dados: " + e.getMessage());
+        }
     }
 
-    /**
-     * Carrega os titulos do CSV.
-     *
-     * @return uma lista de títulos.
-     */
     public List<Titulo> carregar() {
         List<Titulo> titulos = new ArrayList<>();
-
-        // Se o arquivo existir, lê os dados.
-        if (Files.exists(path)) {
-            try {
-                List<String> linhas = Files.readAllLines(path);
-                for (String linha : linhas) {
-                    // Separa os dados de cada linha pelo delimitador ';'
-                    String[] dados = linha.split(";");
-                    if (dados.length == 4) {
-                        long id = Long.parseLong(dados[0]);
-                        String nome = dados[1];
-                        String editora = dados[2];
-                        String autor = dados[3];
-                        titulos.add(new Titulo(id, nome, editora, autor));
+        try {
+            String json = Files.readString(path, StandardCharsets.UTF_8).trim();
+            if (json.isEmpty()) json = "[]";
+            // parse simples de uma lista de objetos com chaves fixas
+            // formato esperado: [{"id":1,"nome":"...","editora":"...","autor":"..."}, ...]
+            if (json.startsWith("[")) {
+                int i = 0, n = json.length();
+                while (i < n) {
+                    int objStart = json.indexOf('{', i);
+                    if (objStart < 0) break;
+                    int brace = 1;
+                    int j = objStart + 1;
+                    while (j < n && brace > 0) {
+                        char c = json.charAt(j);
+                        if (c == '{') brace++;
+                        else if (c == '}') brace--;
+                        j++;
                     }
+                    if (brace == 0) {
+                        String obj = json.substring(objStart, j);
+                        Titulo t = fromJson(obj);
+                        if (t != null) titulos.add(t);
+                        i = j;
+                    } else break;
                 }
-            } catch (IOException e) {
-                // Caso de erro na leitura.
-                System.err.println("Erro ao carregar títulos do arquivo: " + e.getMessage());
             }
+        } catch (IOException e) {
+            System.err.println("Erro ao carregar títulos: " + e.getMessage());
         }
         return titulos;
     }
 
-    /**
-     * Salva a lista de Títulos no arquivo CSV, sobrescrevendo o conteúdo anterior.
-     *
-     * @param titulos A lista de títulos a ser salva.
-     */
     public void salvar(List<Titulo> titulos) {
-        List<String> linhas = new ArrayList<>();
-        // Converte cada objeto Titulo em uma lista formulada para CSV.
-        for (Titulo titulo : titulos) {
-            String linha = String.format("%d;%s;%s;%s",
-                    titulo.getId(),
-                    titulo.getNome(),
-                    titulo.getEditora(),
-                    titulo.getAutor());
-            linhas.add(linha);
+        // Gera IDs sequenciais quando id == 0
+        long max = 0;
+        for (Titulo t : titulos) if (t.getId() > max) max = t.getId();
+        for (Titulo t : titulos) {
+            if (t.getId() == 0) {
+                max += 1;
+                t.setId(max);
+            }
         }
+        StringBuilder sb = new StringBuilder();
+        sb.append('[');
+        for (int i = 0; i < titulos.size(); i++) {
+            if (i > 0) sb.append(',');
+            sb.append(toJson(titulos.get(i)));
+        }
+        sb.append(']');
         try {
-            // Escreve todas as linhas no arquivo de uma só vez.
-            Files.write(path, linhas);
+            Files.writeString(path, sb.toString(), StandardCharsets.UTF_8);
         } catch (IOException e) {
-            System.err.println("Erro so salvar títulos no arquivo: " + e.getMessage());
+            System.err.println("Erro ao salvar títulos: " + e.getMessage());
+        }
+    }
+
+    private static String esc(String s) {
+        if (s == null) return "";
+        StringBuilder out = new StringBuilder(s.length() + 8);
+        for (int i = 0; i < s.length(); i++) {
+            char c = s.charAt(i);
+            switch (c) {
+                case '\': out.append("\\"); break;
+                case '"':  out.append("\""); break;
+                case '
+': out.append("\n"); break;
+                case '
+': out.append("\r"); break;
+                case '	': out.append("\t"); break;
+                default: out.append(c);
+            }
+        }
+        return out.toString();
+    }
+
+    private static String toJson(Titulo t) {
+        return "{"id":" + t.getId() +
+               ","nome":"" + esc(t.getNome()) + """ +
+               ","editora":"" + esc(t.getEditora()) + """ +
+               ","autor":"" + esc(t.getAutor()) + ""}";
+    }
+
+    private static String unesc(String s) {
+        StringBuilder out = new StringBuilder(s.length());
+        for (int i = 0; i < s.length(); i++) {
+            char c = s.charAt(i);
+            if (c == '\' && i + 1 < s.length()) {
+                char n = s.charAt(i + 1);
+                switch (n) {
+                    case 'n': out.append('\n'); break;
+                    case 'r': out.append('\r'); break;
+                    case 't': out.append('\t'); break;
+                    case '\': out.append('\'); break;
+                    case '"': out.append('"'); break;
+                    default: out.append(n); break;
+                }
+                i++;
+            } else {
+                out.append(c);
+            }
+        }
+        return out.toString();
+    }
+
+    private static String getJsonString(String obj, String key) {
+        String pat = """ + key + "":";
+        int idx = obj.indexOf(pat);
+        if (idx < 0) return null;
+        idx += pat.length();
+        // pular espaços
+        while (idx < obj.length() && Character.isWhitespace(obj.charAt(idx))) idx++;
+        if (idx >= obj.length()) return null;
+        if (obj.charAt(idx) == '"') {
+            int j = idx + 1;
+            StringBuilder val = new StringBuilder();
+            while (j < obj.length()) {
+                char c = obj.charAt(j);
+                if (c == '\') {
+                    if (j + 1 < obj.length()) {
+                        val.append(c);
+                        j++;
+                        val.append(obj.charAt(j));
+                        j++;
+                        continue;
+                    }
+                } else if (c == '"') {
+                    break;
+                }
+                val.append(c);
+                j++;
+            }
+            return unesc(val.toString());
+        } else {
+            // número
+            int j = idx;
+            while (j < obj.length() && "0123456789".indexOf(obj.charAt(j)) >= 0) j++;
+            return obj.substring(idx, j);
+        }
+    }
+
+    private static Titulo fromJson(String obj) {
+        try {
+            String sid = getJsonString(obj, "id");
+            String nome = getJsonString(obj, "nome");
+            String editora = getJsonString(obj, "editora");
+            String autor = getJsonString(obj, "autor");
+            long id = 0;
+            if (sid != null && !sid.isBlank()) id = Long.parseLong(sid);
+            Titulo t = new Titulo(id, nome, editora, autor);
+            return t;
+        } catch (Exception e) {
+            return null;
         }
     }
 }
-
